fixing footer content, still overlaps nav

--- a/htdocs/themes/berlin_mcjc/sass/_screen.scss
+++ b/htdocs/themes/berlin_mcjc/sass/_screen.scss
@@ -1219,11 +1219,6 @@ footer {
   }
 }
 
-#footer-text {
-  float: left;
-  width: 48%;
-}
-
 /* @end */
 
 /* @group ----- Exhibit Builder ----- */
